# django-test-task

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
my_django_project/: Makefile  manage.py  pytest.ini
my_django_project/my_django_project/: settings.py  urls.py
my_django_project/places_remember/: admin.py  factory.py  forms.py  models.py  pipeline.py  urls.py  views.py
my_django_project/places_remember/migrations/: 0001_initial.py  0002_memory_userpic.py  0003_memory_lat_memory_lng.py  0004_remove_memory_lat_remove_memory_lng.py  0005_remove_memory_date.py  0006_alter_memory_options_memory_lat_memory_lng.py  0007_remove_memory_lat_remove_memory_lng_coordinates.py  0008_rename_memory_id_coordinates_memory.py  0009_alter_coordinates_memory.py  0010_memory_lat_memory_lng.py  0011_remove_memory_lat_remove_memory_lng.py
my_django_project/places_remember/static/pictures/: vk-login.jpg:Zone.Identifier  vk-login.png:Zone.Identifier
my_django_project/places_remember/templates/: base.html  form.html  index.html  memory-list.html  oauth.html
my_django_project/places_remember/tests/: test_forms.py  test_models.py  test_views.py
